--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ header h1{
 }
 
 .spacio{
-    margin-top: 1000px;
+    margin-top: 200px;
 }
 
   /*  mmmmmmmmmmmmmmmmm */
@@ -118,12 +118,29 @@ header h1{
   font-size: 100;
 }
 
+.text-photo{
+  width: 33%;
+  text-align: left;
+  font-size: larger;
+  padding-top: 8%;
+}
+
+.text-photo-title{
+  width: 33%;
+  text-align: center;
+  font-size: 4rem;
+}
+
+.text-photo-title h1{
+  padding-top: 40%;
+  font-size: 100;
+}
+
 .work-item {
   position: relative;
   width: 300px;
   height: 400px;
   overflow: hidden;
-  background-color: fuchsia;
   border-radius: 25px;
   transition: transform 0.2s ease, box-shadow 0.2s ease;
   will-change: transform; 
